[package]
name = "mini2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="4.0.32", features=["derive"]}
rand = "0.8.4"
serde = {version="1.0.130", features=["derive"]}
serde_json = "1.0.70"

[dev-dependencies]
assert_cmd = "2.0.8"
